# locator_ros_bridge

./: CONTRIBUTING.md  NOTICE  README.md
.github/workflows/: build_foxy.yml  build_galactic.yml  build_humble.yml  build_noetic.yml  build_rolling.yml  build_utils_galactic.yml  build_utils_humble.yml
bosch_locator_bridge/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bosch_locator_bridge/config/: locator_bridge_localization.rviz  locator_bridge_map_creation.rviz  locator_bridge_map_creation_with_prior_map.rviz  locator_bridge_visual_recording.rviz  locator_bridge_visual_recording_with_pror_map.rviz
bosch_locator_bridge/include/bosch_locator_bridge/: enums.hpp  locator_bridge_node.hpp  locator_rpc_interface.hpp  receiving_interface.hpp  rosmsgs_datagram_converter.hpp  sending_interface.hpp
bosch_locator_bridge/include/bosch_locator_bridge/server/: server_bridge_node.hpp
bosch_locator_bridge/launch/: bridge.launch  bridge.launch.xml  bridge_with_bagplayback.launch  bridge_with_bagplayback.launch.xml  server_bridge.launch  server_bridge.launch.xml
bosch_locator_bridge/msg/: ClientControlMode.msg  ClientExpandMapOverwriteZoneInformation.msg  ClientExpandMapVisualization.msg  ClientGlobalAlignLandmarkObservationNotice.msg  ClientGlobalAlignLandmarkVisualizationInformation.msg  ClientGlobalAlignVisualization.msg  ClientLocalizationPose.msg  ClientLocalizationVisualization.msg  ClientRecordingVisualization.msg
bosch_locator_bridge/src/: locator_bridge_node.cpp  locator_rpc_interface.cpp  main.cpp  receiving_interface.cpp  rosmsgs_datagram_converter.cpp  sending_interface.cpp
bosch_locator_bridge/src/server/: server_bridge_node.cpp  server_main.cpp
bosch_locator_bridge/srv/: ClientConfigGetEntry.srv  ClientExpandMapEnable.srv  ClientMapList.srv  ClientMapSend.srv  ClientMapStart.srv  ClientRecordingSetCurrentPose.srv  ServerMapGetImageWithResolution.srv
bosch_locator_bridge_utils/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
bosch_locator_bridge_utils/config/: localization.rviz
bosch_locator_bridge_utils/include/bosch_locator_bridge_utils/: locator_node.hpp  map_server.hpp
bosch_locator_bridge_utils/launch/: localization_launch.py
bosch_locator_bridge_utils/params/: params.yaml
bosch_locator_bridge_utils/src/: locator_node.cpp  locator_node_main.cpp  map_server.cpp  map_server_main.cpp
