<?xml version="1.0"?>
<package format="3">
  <name>bosch_locator_bridge</name>
  <version>0.0.0</version>
  <description>The bosch_locator_bridge package</description>

  <maintainer email="stefan.laible@de.bosch.com">Stefan Laible</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>launch_xml</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <depend>libpoco-dev</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
