<?xml version="1.0"?>
<package format="2">
  <name>bosch_locator_bridge</name>
  <version>1.0.9</version>
  <description>ROS interface to Rexroth ROKIT Locator</description>

  <maintainer email="stefan.laible@de.bosch.com">Stefan Laible</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>libpoco-dev</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
</package>
