<?xml version="1.0"?>
<package format="3">
  <name>bosch_locator_bridge_utils</name>
  <version>2.1.10</version>
  <description>Utilities to use bosch_locator_bridge with Nav2</description>

  <maintainer email="stefan.laible@de.bosch.com">Stefan Laible</maintainer>

  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_util</depend>
  <depend>pcl_conversions</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
